force-app/main/default/objects/SVMXC__Warranty__c/fields/SVMXC__All_Products_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__All_Products_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>All Products Covered</label>
    <type>Checkbox</type>
</CustomField>