force-app/main/default/objects/SVMXC__Warranty__c/fields/SVMXC__Shipment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Shipment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Shipment Allowed</label>
    <type>Checkbox</type>
</CustomField>