force-app/main/default/objects/SVMXC__Warranty__c/fields/SVMXC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Date__c</fullName>
    <description>Warranty start date</description>
    <inlineHelpText>Warranty start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>