force-app/main/default/objects/SVMXC__Warranty__c/fields/SVMXC__Travel_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Travel_Covered__c</fullName>
    <label>Travel % Covered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>