force-app/main/default/objects/SVMXC__Warranty__c/fields/SVMXC__Weeks_to_End__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Weeks_to_End__c</fullName>
    <description>Number of weeks before the warranty ends. Calculated automatically</description>
    <formula>(SVMXC__End_Date__c - TODAY()) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks to End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>